[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Battle/FastPaced/FastPacedMemoryBattleScene.gd" type="Script" id=1]
[ext_resource path="res://assets/images/monsters/GoldSlime.png" type="Texture" id=2]
[ext_resource path="res://assets/images/gui/healthbar-bg.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/healthbar-fill.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Lato-Black.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/images/protagonist.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Battle/FastPaced/RecallGrid.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/images/battle/actions.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 32, 32 )

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="MonsterControls" type="Node2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 0, 60 )

[node name="MonsterSprite" type="Sprite" parent="MonsterControls" index="0"]

position = Vector2( 10, 40 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="MonsterHealth" type="TextureProgress" parent="MonsterControls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 59.0
margin_right = 240.0
margin_bottom = 91.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 75.0
exp_edit = false
rounded = true
texture_under = ExtResource( 3 )
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Textures" ]

[node name="Label" type="Label" parent="MonsterControls/MonsterHealth" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 2.0
margin_right = 141.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "75"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="PlayerControls" type="Node2D" parent="." index="1"]

editor/display_folded = true

[node name="PlayerSprite" type="Sprite" parent="PlayerControls" index="0"]

position = Vector2( 11.718, -14.4058 )
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 128 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="PlayerHealth" type="TextureProgress" parent="PlayerControls" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_top = 29.0
margin_right = 242.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 75.0
exp_edit = false
rounded = true
texture_under = ExtResource( 3 )
texture_over = null
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Focus", "Grow Direction", "Hint", "Margin", "Rect", "Textures" ]

[node name="Label" type="Label" parent="PlayerControls/PlayerHealth" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 2.0
margin_right = 141.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "75"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="TurnLabel" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 180.0
margin_right = 239.0
margin_bottom = 219.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Player attacks!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="StatusLabel" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 520.0
margin_right = 930.0
margin_bottom = 559.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Slime deals 9999 damage! DIE!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="RecallGrid" parent="." index="4" instance=ExtResource( 7 )]

position = Vector2( 270, 30 )

[node name="NextTurnButton" type="Button" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_top = 238.0
margin_right = 217.0
margin_bottom = 283.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Next Turn"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="ActionsPanel" type="Panel" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 316.0
margin_right = 244.0
margin_bottom = 496.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse" ]

[node name="AttackButton" type="Sprite" parent="ActionsPanel" index="0"]

position = Vector2( 8, 10 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="Area2D" type="Area2D" parent="ActionsPanel/AttackButton" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionsPanel/AttackButton/Area2D" index="0"]

position = Vector2( 32, 32 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="CriticalButton" type="Sprite" parent="ActionsPanel" index="1"]

position = Vector2( 78, 10 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="Area2D" type="Area2D" parent="ActionsPanel/CriticalButton" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionsPanel/CriticalButton/Area2D" index="0"]

position = Vector2( 32, 32 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="PotionButton" type="Sprite" parent="ActionsPanel" index="2"]

position = Vector2( 148, 10 )
texture = ExtResource( 8 )
centered = false
region_enabled = true
region_rect = Rect2( 192, 0, 64, 64 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="Area2D" type="Area2D" parent="ActionsPanel/PotionButton" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionsPanel/PotionButton/Area2D" index="0"]

position = Vector2( 32, 32 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[connection signal="pressed" from="NextTurnButton" to="." method="_on_NextTurnButton_pressed"]

[connection signal="input_event" from="ActionsPanel/AttackButton/Area2D" to="." method="_on_AttackButton_input_event"]

[connection signal="input_event" from="ActionsPanel/CriticalButton/Area2D" to="." method="_on_CriticalButton_input_event"]

[connection signal="input_event" from="ActionsPanel/PotionButton/Area2D" to="." method="_on_PotionButton_input_event"]


